--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -5,9 +5,11 @@
   justify-content: space-between;
   width: 100%;
   padding: 20px;
-  background-color: #111;
   height: 30px;
   z-index: 1;
+  /* animation  */
+  transition-timing-function: ease-in;
+  transition: all 0.5s;
 }
 
 .nav__logo {
@@ -22,4 +24,8 @@
   object-fit: contain;
   position: fixed;
   right: 20px;
+}
+
+.nav__black {
+  background-color: #111;
 }
